package com.pokesim.controller;

import com.pokesim.model.game.Game;

public class GameController {
    private Game game = new Game();

    public void run(){

    }
}
