package com.pokesim.model.game;

import com.pokesim.model.entities.Player;
import com.pokesim.model.entities.WildPokemons;
import com.pokesim.utils.RandomGenerator;

public class BattleSystem {
    private RandomGenerator random = new RandomGenerator();

    public boolean startBattle(Player player, WildPokemons wildPokemons) {

        return false;
    }
}
