package com.pokesim.model.game;

import com.pokesim.model.entities.Player;
import com.pokesim.model.world.City;

public class Game {
    private Player player;
    private City currentCity;

    public void start(){

    }

    public boolean isGameOver(){
        return false;
    }
}
