package com.pokesim.model.store;

import com.pokesim.model.entities.Pokemon;
import com.pokesim.model.entities.AllPokemons;

public class PokemonStore {
    private AllPokemons allPokemons = new AllPokemons();

    public Pokemon buyPokemon(){
        return null;
    }
}
