package com.pokesim.model.world;

import java.util.List;

public class City {
    private String name;

    public City(String name) {
        this.name = name;
    }

    public List<String> getMenu(){

        return null;
    }

    public String getName() {
        return name;
    }
}
