package com.pokesim.view;

import com.pokesim.model.world.City;

public class ConsoleUI {
    public void displayCityOptions(City city) {

    }

    public int getStarterChoice(){
        return 0;
    }

    public String getName(){
        return null;
    }
}
